# Recover_Ease

./: .env.example  .gitignore  PROJECT_STATUS.md  Prompt.txt  README.md  docker-compose.dev.yml  test_endpoints.ps1  test_results.txt
backend/: Dockerfile  package-lock.json  package.json
backend-python/: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend-python/alembic/: env.py  script.py.mako
backend-python/alembic/versions/: 0001_add_image_url_to_chat_messages.py  0002_add_whatsapp_phone_to_users.py
backend-python/app/: main.py
backend-python/app/api/: ai.py  auth.py  care_plan.py  chat.py  deps.py  patient.py  request.py  symptom.py  webhook.py
backend-python/app/core/: config.py  constants.py  database.py  logger.py  redis.py  security.py
backend-python/app/middleware/: auth.py  error_handler.py  rate_limiter.py
backend-python/app/models/: models.py
backend-python/app/schemas/: auth.py  care_plan.py  chat.py  common.py  patient.py  request.py  symptom.py
backend-python/app/services/: auth_service.py  care_plan_service.py  email_service.py  escalation_service.py  groq_service.py  patient_service.py  recovery_service.py  request_service.py  symptom_service.py  whatsapp_service.py
backend-python/app/socket/: manager.py
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
frontend/: .env.example  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+75 files in other folders)
